feat: Initialize Django project structure with Games and Reviews apps
- Added .devcontainer/requirements.txt for project dependencies including Django REST framework and CORS headers.
- Created initial structure for AvaliacoesSite project with settings, URLs, WSGI, and ASGI configurations.
- Implemented Games app with models, serializers, views, and URLs for game management.
- Developed Reviews app with models, serializers, views, and URLs for game reviews.
- Established Seguranca app for user authentication and management, including signup, login, and password reset functionalities.
- Added forms for user registration and game reviews with validation.
- Integrated Swagger documentation for API endpoints using drf_yasg.
- Set up initial migrations for Games and Reviews models.

Co-authored-by: Felipe Falcão <Rekaniry@users.noreply.github.com>

--- a/.devcontainer/requirements.txt
+++ b/.devcontainer/requirements.txt
@@ -13,3 +13,9 @@ python-dotenv
 # Type checking (optional but useful)
 mypy
 django-stubs
+
+# API
+djangorestframework
+django-cors-headers
+drf_yasg
+coreapi
